k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: complai
  labels:
    name: complai
    app: complai-stack
